[gd_scene load_steps=9 format=3 uid="uid://dejfhe7h21tkm"]

[ext_resource type="Script" path="res://Scripts/slime.gd" id="1_yaqqe"]
[ext_resource type="Texture2D" uid="uid://cy3m8uhipwkcm" path="res://Assets/Sprites/Slime Gel.png" id="2_fgnbm"]
[ext_resource type="Script" path="res://Scripts/Components/hurtbox.gd" id="3_f01e0"]
[ext_resource type="Script" path="res://Scripts/timer_tween.gd" id="3_wpigy"]
[ext_resource type="Script" path="res://Scripts/uI_slime.gd" id="5_7v2gb"]
[ext_resource type="Script" path="res://Scripts/Components/health_component.gd" id="6_4qwym"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jnnxp"]
radius = 18.3848

[sub_resource type="CircleShape2D" id="CircleShape2D_jragy"]
radius = 15.5724

[node name="Slime" type="CharacterBody2D"]
texture_filter = 1
scale = Vector2(2, 2)
script = ExtResource("1_yaqqe")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_fgnbm")

[node name="Hurtbox" type="Area2D" parent="Sprite"]
script = ExtResource("3_f01e0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Hurtbox"]
position = Vector2(0, 2.5)
shape = SubResource("CircleShape2D_jnnxp")
debug_color = Color(0.803922, 0.376471, 0.482353, 0.419608)

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 2.5)
shape = SubResource("CircleShape2D_jragy")

[node name="Timer_Tween" type="Timer" parent="."]
wait_time = 2.0
autostart = true
script = ExtResource("3_wpigy")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -19.0
offset_top = 29.0
offset_bottom = 40.0
scale = Vector2(1.03877, 1)
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("5_7v2gb")

[node name="Label" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -3.11576
offset_top = -18.5
offset_right = 15.8842
offset_bottom = 4.5
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.317242, 0.317242)
text = "50
"

[node name="Health_Component" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("6_4qwym")
life = 50

[connection signal="area_entered" from="Sprite/Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="Timer_Tween" to="." method="_on_timer_tween_timeout"]
[connection signal="life_updated" from="Health_Component" to="UI" method="_on_health_component_life_updated"]
